--- a/package.json
+++ b/package.json
@@ -10,19 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@azure/msal-node": "^2.16.2",
-    "axios": "^1.7.9",
-    "ews-javascript-api": "^0.15.3",
-    "googleapis": "^144.0.0",
     "https-proxy-agent": "^7.0.6",
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
-    "mailparser": "^3.7.2",
     "node-imap": "^0.9.6",
-    "node-outlook": "^1.1.8",
-    "nodemailer": "^6.9.16",
-    "socks-proxy-agent": "^8.0.5",
-    "utf7": "^1.0.2",
-    "xoauth2": "^1.2.0"
+    "socks-proxy-agent": "^8.0.5"
   }
 }
